New build with workaround for terminal cleanup on exit.
Updated TS4S so we can build with -t while issue #777 is ongoing.

Ran `npm audit fix` to address a security issue in some dependency
of the build system. Perhaps this will silence the alert GitHub
sent to DM; I'm not sure what that was.

--- a/xtrn/bullshit/package.json
+++ b/xtrn/bullshit/package.json
@@ -5,13 +5,13 @@
   "main": "src/bullshit.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ts4s build -s src -b ./",
+    "build": "ts4s build -s src -b ./ -t",
     "deploy": "npm run build && eval $(cat .env) && scp -P $SSH_PORT ./*.*js $SSH_USER@$SSH_HOST:$DEPLOY_PATH"
   },
   "author": "echicken",
   "license": "MIT",
   "dependencies": {
-    "@swag/ts4s": "git+ssh://git@gitlab.synchro.net:swag/ts4s.git#newload",
+    "@swag/ts4s": "git+ssh://git@gitlab.synchro.net:swag/ts4s.git",
     "swindows": "git+ssh://git@gitlab.synchro.net:echicken/swindows.git"
   }
 }
